minor changes in css and html

--- a/index.html
+++ b/index.html
@@ -31,45 +31,51 @@
         <img class="todo_list__delete" src="images/icon-cross.svg" alt="">
       </li>
       <li class='todo_list__item'>
-        <div class="todo_list__check"></div>
-        <span class="todo_list__task">Umyć okna</span>        
-        <img class="todo_list__delete" src="images/icon-cross.svg" alt="">
-      </li>
-      <li class='todo_list__item'>
         <div class="todo_list__check todo_list__check--complete"></div>
-        <span class="todo_list__task todo_list__task--completed">Wypić herbatę</span>        
+        <span class="todo_list__task todo_list__task--completed">Complete online JavaScript course</span>        
         <img class="todo_list__delete" src="images/icon-cross.svg" alt="">
       </li>
       <li class='todo_list__item'>
         <div class="todo_list__check"></div>
-        <span class="todo_list__task">Zjeść obiad</span>        
+        <span class="todo_list__task">Jog around the park 3x</span>        
         <img class="todo_list__delete" src="images/icon-cross.svg" alt="">
       </li>
       <li class='todo_list__item'>
         <div class="todo_list__check"></div>
-        <span class="todo_list__task">Zjeść kolację</span>        
+        <span class="todo_list__task">10 minutes meditation</span>        
+        <img class="todo_list__delete" src="images/icon-cross.svg" alt="">
+      </li>
+      <li class='todo_list__item'>
+        <div class="todo_list__check"></div>
+        <span class="todo_list__task">Read for 1 hour</span>        
+        <img class="todo_list__delete" src="images/icon-cross.svg" alt="">
+      </li>
+      <li class='todo_list__item'>
+        <div class="todo_list__check"></div>
+        <span class="todo_list__task">Pick up groceries</span>        
+        <img class="todo_list__delete" src="images/icon-cross.svg" alt="">
+      </li>
+      <li class='todo_list__item'>
+        <div class="todo_list__check"></div>
+        <span class="todo_list__task">Complete Todo App on Frontend Mentor</span>        
         <img class="todo_list__delete" src="images/icon-cross.svg" alt="">
       </li>
     </ul>
     <div class="todo_list__footer">
       <span class="todo_list__incompleted"></span>
       <div class="todo_list__status todo_list__status--desktop">
-        <button class="todo_list__button">All</button>
-        <button class="todo_list__button">Active</button>
-        <button class="todo_list__button">Completed</button>
+        <button class="todo_list__button todo_list__button--all">All</button>
+        <button class="todo_list__button todo_list__button--remained">Active</button>
+        <button class="todo_list__button todo_list__button--completed">Completed</button>
       </div>
       <span class="todo_list__cls-completed">Clear Completed</span>
     </div>
   </main>
   <div class="todo_list__status todo_list__status--mobile">
-    <button class="todo_list__button">All</button>
-    <button class="todo_list__button">Active</button>
-    <button class="todo_list__button">Completed</button>
+    <button class="todo_list__button todo_list__button--all">All</button>
+    <button class="todo_list__button todo_list__button--remained">Active</button>
+    <button class="todo_list__button todo_list__button--completed">Completed</button>
   </div>
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
   <script src="js/main.js"></script>
 </body>
 
