fix todo Footer

--- a/index.html
+++ b/index.html
@@ -27,11 +27,6 @@
     <ul class="todo_list__tasks">
       <li class='todo_list__item'>
         <div class="todo_list__check todo_list__check--complete"></div>
-        <span class="todo_list__task todo_list__task--completed">Zjeść śniadanie</span>        
-        <img class="todo_list__delete" src="images/icon-cross.svg" alt="">
-      </li>
-      <li class='todo_list__item'>
-        <div class="todo_list__check todo_list__check--complete"></div>
         <span class="todo_list__task todo_list__task--completed">Complete online JavaScript course</span>        
         <img class="todo_list__delete" src="images/icon-cross.svg" alt="">
       </li>
@@ -64,17 +59,17 @@
     <div class="todo_list__footer">
       <span class="todo_list__incompleted"></span>
       <div class="todo_list__status todo_list__status--desktop">
-        <button class="todo_list__button todo_list__button--all">All</button>
-        <button class="todo_list__button todo_list__button--remained">Active</button>
-        <button class="todo_list__button todo_list__button--completed">Completed</button>
+        <button class="todo_list__button todo_list__button--allDesktop">All</button>
+        <button class="todo_list__button todo_list__button--remainedDesktop">Active</button>
+        <button class="todo_list__button todo_list__button--completedDesktop">Completed</button>
       </div>
       <span class="todo_list__cls-completed">Clear Completed</span>
     </div>
   </main>
   <div class="todo_list__status todo_list__status--mobile">
-    <button class="todo_list__button todo_list__button--all">All</button>
-    <button class="todo_list__button todo_list__button--remained">Active</button>
-    <button class="todo_list__button todo_list__button--completed">Completed</button>
+    <button class="todo_list__button todo_list__button--allMobile">All</button>
+    <button class="todo_list__button todo_list__button--remainedMobile">Active</button>
+    <button class="todo_list__button todo_list__button--completedMobile">Completed</button>
   </div>
   <script src="js/main.js"></script>
 </body>
